manifests/01-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ai-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        version: v2
    spec:
      containers:
        - name: redis
          image: redis:7-alpine@sha256:c1b9f9ba224f516e43f1a4b0cfb29b9e31ebf04f5ff194dd8140114a198c346e
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ai-data
spec:
  selector:
    app: redis
  ports:
    - port: 6379
